--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "copy-to-clipboard": "^3.3.3",
     "next": "latest",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "autoprefixer": "latest",
